--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
 	<h1>My personal blog</h1>
-	<p>Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Использовало безопасную решила до, города, буквенных великий свою рыбными большой переулка силуэт. Предупреждал, букв, жизни алфавит заманивший щеке речью до!</p>
+	<p>Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Первую послушавшись эта маленькая безорфографичный, залетают дороге пояс букв там вдали рыбного. Языкового курсивных жаренные, возвращайся меня парадигматическая за однажды.</p>
 </body>
 </html>
