--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>My personal blog</title>
+	<link rel="shortcut icon" sizes="180x180" href="fv.png">
 </head>
 <body>
 	<h1>My personal blog</h1>
